Vyrn/Tests/vyrn/return_types_multi_pcall.vyrn
def bad() -> number, number
    return 10, "oops"
end

let ok, err = pcall(bad)
print(ok)
print(err)
